--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <!-- Who Am I Section -->
 <section class="whoami fade-in">
   <div class="photo left-photo">
-    <img src="resources/left.jpg.jpg" alt="Left Side" />
+    <img src="resources/left.jpg" alt="Left Side" />
   </div>
   <div class="whoami-content">
     <h2>Who Am I?</h2>
@@ -63,7 +63,7 @@
     </p>
   </div>
   <div class="photo right-photo">
-    <img src="resources/right.jpg.webp" alt="Right Side" />
+    <img src="resources/right.webp" alt="Right Side" />
   </div>
 </section>
 
